# firecracker

./: .gitignore  .gitmodules
experiments/: boot_microvm.sh  configure_iaa_user.sh  make_snaphot.sh  restore_snapshot.sh  setup.sh
iaa_qpl_compress/: CMakeLists.txt  compression_engine-c.cc  compression_engine-c.h  compression_engine.cc  compression_engine.h  compression_engine_demo.cc  memory_restorator.h  memory_restorator_demo.cc  memory_restorator_test.cc  microbenchmark.cc  test_utils.h  utils.h
sabre/: .gitignore  CMakeLists.txt  README.md  mem_pool.h  memory_restorator-c.cc  memory_restorator-c.h  memory_restorator.cc  memory_restorator.h  memory_restorator_demo.cc  memory_restorator_tests.cc  microbenchmark.cc  plot_microbenchmark.py  reap_recorder.cc  reap_recorder.h  simple_logging.h  utils.h
sabre/containerd/: cleen_up.sh  configure_node_for_containerd.sh  go.mod.patch  install_contrainerd.sh
sabre/containerd/e2e_experiments/: execute_experiment.go
sabre/examples/: boot_microvm.sh  configure_iaa_user.sh  firecracker_conteinerd_setup.sh  make_rootfs.sh  make_snaphot.sh  restore_snapshot.sh  setup.sh  test.sh  test_diff.sh
sabre/scripts/: configure_iaa_user.sh  plot_microbenchmark.py  setup_node.sh
src/api_server/src/: lib.rs
src/api_server/src/request/: snapshot.rs
src/utils/src/: vm_memory.rs
src/vmm/src/: builder.rs  memory_snapshot.rs  persist.rs  resources.rs  rpc_interface.rs
src/vmm/src/vmm_config/: machine_config.rs  snapshot.rs
tools/: devtool  release.sh
tools/devctr/: Dockerfile
